...

        let alert = UIAlertController(
            title: result.title,
            message: message,
            preferredStyle: .alert)

        alert.view.accessibilityIdentifier = "EndGameAlert"

        let action = UIAlertAction(title: result.buttonText, style: .default) { [weak self] _ in
            guard let self = self else { return }

            self.presenter.restartGame()
        }
...
